adding hybrid worker group settings resource and fixing group resource. (#71)
* adding hybrid worker group settings resource and fixing group resource.

* skipping workspace test.

* renaming to group settings and also fixing workspace schema.

* fixing test.
